--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "start": "vite",
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "test-ct": "playwright test -c playwright-ct.config.ts",
+    "test-ct-debug": "playwright test -c playwright-ct.config.ts --debug"
   },
   "license": "MIT",
   "devDependencies": {
+    "@playwright/experimental-ct-solid": "^1.30.0",
     "typescript": "^4.9.4",
     "vite": "^4.0.3",
     "vite-plugin-solid": "^2.5.0"
