--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
   "license": "MIT",
   "devDependencies": {
     "@playwright/experimental-ct-solid": "^1.30.0",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.3",
     "typescript": "^4.9.4",
     "vite": "^4.0.3",
     "vite-plugin-solid": "^2.5.0"
